# textbone

./: .baw  .gitignore  CHANGELOG  CHANGELOG.md  Dockerfile  Jenkinsfile  MANIFEST.in  Makefile  README  article  pyproject.toml  requirements.dev  requirements.txt  rundev.sh  setup.py
.baw/: project.cfg
.github/workflows/: release.yml
backbone/: __init__.py  ngram.py  normalize.py  rand.py  view.py
backbone/judge/: __init__.py  slang.py
backbone/train/: judge_slang.py
bbview/: __main__.py  app.py  config.py
bbview/api/: __init__.py  magic.py  utils.py
bbview/api/analysis/: __init__.py  document.py
bbview/api/data/: __init__.py
bbview/api/judge/: __init__.py  sentence.py
bbview/api_/analysis/: document.py  sentence.py
bbview/api_/judge/: sentence.py
bbview/api_/judge_/: sentence.py
bbview/static/: base.css
bbview/static/css/: analysis.css  judge.css
bbview/static/js/: analysis.js  base.js  judge.js
bbview/templates/: base.html
bbview/templates/analysis/: index.html
bbview/templates/judge/: index.html
bbview/templates/public/: error.html
bbview/view/: analysis.py  judge.py  welcome.py
docs/: index.rst
hugedata/: __init__.py  statistics.py  utils.py
hugedata/lit/bachelor/: bachelor051.txt  bachelor051_intro.txt  bachelor051_outro.txt  bachelor056.txt  bachelor056_intro.txt  bachelor076.txt  bachelor076_intro.txt  bachelor076_outro.txt  bachelor128.txt  bachelor128_intro.txt  bachelor128_outro.txt
hugedata/lit/diss/: diss266.txt
hugedata/lit/master/: master072.txt  master072_bibliography.txt  master072_blockquote.txt  master072_footnote.txt  master072_list.txt  master072_outro.txt  master075.txt  master075_abstract.txt  master075_intro.txt  master075_list.txt  master075_outro.txt  master083.txt  master083_intro.txt  master083_outro.txt  master089.txt  master089_intro.txt  master089_outro.txt  master098.txt  master098_intro.txt  master098_outro.txt  master099.txt  master099_intro.txt  master099_outro.txt
hugedata/literature/master/: master072_bibliography.txt  master072_blockquote.txt  master072_intro.txt  master072_list.txt  master075.txt  master075_intro.txt  master075_outro.txt
hugedata/order/: order024.txt  order024_intro.txt
hugedata/tech/bachelor/: bachelor063.txt  bachelor063_intro.txt  bachelor063_outro.txt  bachelor111.txt  bachelor111_intro.txt
hugedata/tech/diss/: diss205.txt
hugedata/utils/: abbreviations.txt  roman.txt
judgeddata/: __init__.py  data.py  sentence
tests/: __init__.py  conftest.py  test_document.py
tests/backbone_/: __init__.py  test_normalize_cli.py
tests/bbview_/: conftest.py  test_view.py  test_welcome.py  utils.py
tests/bbview_/api/: test_document.py  test_sentences.py
tests/bbview_/api/judge/: test_sentences.py
tests/bbview_/api_/: test_sentence.py
tests/textbone_/: __init__.py  test_normalize_cli.py
textbone/: __init__.py  ngram.py  rand.py
textbone/judge/: __init__.py  slang.py
textbone/train/: judge_slang.py
